--- a/src/main/resources/lang/localization_en-US.yml
+++ b/src/main/resources/lang/localization_en-US.yml
@@ -32,6 +32,7 @@ Localization:
   GAME_JOIN: "{PLAYER} has joined the HideAndSeek lobby."
   GAME_JOIN_SPECTATOR: "You have joined mid game and are now a spectator."
   GAME_LEAVE: "{PLAYER} has left the HideAndSeek lobby."
+  GAME_BLOCKCHANGE: "You cannot change the Block right now."
   LOBBY_IN_USE: "Cant modify the lobby while the lobby isn't empty."
   CONFIG_RELOAD: "Reloaded the config."
   MAPSAVE_INPROGRESS: "Map save is currently in progress. Try again later."
